# tdgp

./: .gitignore  CITATION.cff  LICENSE  README.md  REPLICATION.md  pyproject.toml
data/: SNAPSHOT.txt  data_full.parquet
notes/: 00_abstract.md  01_introduction.md  02_compliance_gated_class.md  03_tdgp_pipeline.md  04_chicago_demo.md  05_causal_estimation.md  06_structural_inference.md  07_counterfactuals.md  08_conclusion.md
results/docs/counterfactual/: analysis.txt  description.txt  results.txt
results/docs/data/: eda_report.txt
results/docs/diagnostic/: description.txt  explanation.txt  results.txt
results/docs/experiments/: design.txt  explanation.txt  results.txt
results/docs/inference/: description.txt  inference.txt  results - m3.txt  results - m6.txt
results/docs/mediator/: mediator_to_outcome.txt  upstream_to_mediator.txt
results/experiments/: table_comparison.tex
scripts/: generate_figure_2b3d.py  render_draft.py  xgb_standard_pipeline.py
scripts/counterfactual/: counterfactual.py
scripts/data/: candidate_dag.py  eda_dataset.py  shadow_matrix_values.py
scripts/diagnostic/: m2_shap.py
scripts/experiments/: experiment.py  models.py  pipeline.py  reporting.py
scripts/inference/: m3_inference.py  m6_inference.py
scripts/mediator/: mediator_to_outcome.py  upstream_to_mediator.py
scripts/sensitivity/: sensitivity.py
tex/: main.tex
tex/sections/: 00_abstract.tex  01_introduction.tex  02_section.tex  03_section.tex  04_section.tex  05_section.tex  06_section.tex  07_section.tex  08_section.tex  references.tex
(+3 files in other folders)
